--- a/app/styles/popup.scss
+++ b/app/styles/popup.scss
@@ -33,6 +33,14 @@
 
 	transform: scale(0, 0);
 
+	.close {
+		font-size: 16px;
+		position: absolute;
+		right: 5px; top: 0;
+		padding: 7px;
+		cursor: pointer;
+	}
+
 	&.opened {
 		transition: transform 300ms;
 		transform: scale(1, 1);
