--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -6,3 +6,4 @@ $dark-text: #333;
 // Universal transition time, easing
 $trans-time-easing: .15s;
 $font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
+$font-size: 14px;
