Add popup and rest of views, simplify routing

--- a/app/styles/views.scss
+++ b/app/styles/views.scss
@@ -30,11 +30,13 @@
 	align-items: center;
 }
 
-/* Intro */
+/* Full height */
 
-.intro {
+.full-height {
 	min-height: 90vh;
 }
+
+/* Intro */
 
 .intro-text {
 	text-align: center;
