--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,58 +1,14 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>contestJS</title>
-
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<!-- Place favicon.ico in the root directory -->
-
-		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
-
-		<!-- build:css styles/main.css -->
-		<link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
-		<link rel="stylesheet" href="styles/main.css">
-		<!-- endbuild -->
-	</head>
-	<body>
-		<div class="wrapper">
-			<nav class="menu">
-				<ul>
-					<li><a href="#prizes">Prizes</a></li>
-					<li><a href="#rules">Rules</a></li>
-					<li><a href="#help">Help</a></li>
-				</ul>	
-			</nav>
-			
-			<section class="main">
-				<div class="question-box">
-					<header>
-						<h2 class="question-name">Fill your informations</h2>
-						<span class="question-count">5/5</span>
-					</header>
-					<form>
-						<p><input class="half-size" type="text" name="" placeholder="Your name"><input class="half-size" type="text" name="" placeholder="Your last name"></p>
-						<p><input class="half-size" type="text" name="" placeholder="Email"><input class="half-size" type="text" name="" placeholder="Your phone number"></p>
-						<p><textarea placeholder="In few words, write about..."></textarea></p>
-						<a href="#" class="btn btn-primary btn-lg btn-submit">Submit</a>
-					</form>
-				</div>
-			</section>
-			<footer class="footer">
-				<nav>
-					<ul>
-						<li><a href="#about">About us</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</footer>
-
-		</div>
-
-		<!-- build:js scripts/bundle.js -->
-		<script src="scripts/bundle.js"></script>
-		<!-- endbuild -->
-	</body>
-</html>
+<section class="full-height main-view">
+	<section class="question-box">
+		<header>
+			<h2 class="question-name">Fill your informations</h2>
+			<span class="question-count">5/5</span>
+		</header>
+		<form>
+			<p><input class="half-size" type="text" name="" placeholder="Your name"><input class="half-size" type="text" name="" placeholder="Your last name"></p>
+			<p><input class="half-size" type="text" name="" placeholder="Email"><input class="half-size" type="text" name="" placeholder="Your phone number"></p>
+			<p><textarea placeholder="In few words, write about..."></textarea></p>
+			<a href="#" class="btn btn-primary btn-lg btn-submit">Submit</a>
+		</form>
+	</section>
+</section>
