--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -1,10 +1,10 @@
-<section class="intro main-view">
+<section class="full-height main-view">
 	<header class="intro-text">
 		<h1>Join Our Contest</h1>
 		<article>
 			Show us your knowledge about finances<br>and have a great chance to win valuable prizes
 		</article>
-		<a href="#question-1" class="btn btn-primary btn-lg">
+		<a href="question/1" class="btn btn-primary btn-lg">
 			Start now &raquo;
 		</a>
 	</header>
