--- a/app/styles/popup.scss
+++ b/app/styles/popup.scss
@@ -12,13 +12,12 @@
 
 	z-index: 99;
 	background: rgba(0,0,0,0.45);
+	
 	opacity: 0;
-	visibility: hidden;
+	transition: opacity .3s;
 
 	&.opened {
 		opacity: 1;
-		transition: opacity .15s;
-		visibility: visible;
 	}
 }
 
@@ -32,6 +31,7 @@
 	text-align: center;
 
 	transform: scale(0, 0);
+	transition: transform .3s;
 
 	.close {
 		font-size: 16px;
@@ -42,7 +42,6 @@
 	}
 
 	&.opened {
-		transition: transform 300ms;
 		transform: scale(1, 1);
 	}
 }
