--- a/app/styles/views.scss
+++ b/app/styles/views.scss
@@ -66,3 +66,31 @@
 		text-align: left;
 	}
 }
+
+/* View transitions */
+
+.view {
+	transition: opacity .3s;
+}
+
+/* Show/hide views */
+
+.view-out {
+	opacity: 0;
+}
+
+/*
+ * Hide only visually, but have it available for screen readers:
+ * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ */
+
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
