Add form template and question animations

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -71,13 +71,13 @@ form {
 	}
 
 	input {
-		
+		margin-bottom: 14px;
 	}
 
 	.half-size {
 		width: 49%;
 
-		&:first-child {
+		&:nth-child(odd) {
 			margin-right: 2%;
 		}
 	}
