--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -53,6 +53,23 @@ nav {
 	}
 }
 
+/* YouTube iframes */
+
+.video-wrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+
+	iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
 /* Forms */
 
 form {
