--- a/app/views/popup/about.html
+++ b/app/views/popup/about.html
@@ -1,3 +1,3 @@
-<h2>About</h2>
+<h2>About us</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium numquam, veniam eos nobis at blanditiis.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi consectetur aliquid, excepturi aspernatur, libero porro ipsa omnis iusto autem harum molestias, ipsum dicta. Iure laudantium autem, doloremque soluta nemo laboriosam.</p>
