--- a/app/views/popup/contact.html
+++ b/app/views/popup/contact.html
@@ -1,3 +1,4 @@
 <h2>Contact</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium numquam, veniam eos nobis at blanditiis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi consectetur aliquid, excepturi aspernatur, libero porro ipsa omnis iusto autem harum molestias, ipsum dicta. Iure laudantium autem, doloremque soluta nemo laboriosam.</p>
+<h3><strong>Our Great Company</strong></h3>
+<p>609 8th Street West<br>Oak Forest, IL 60452</p>
+<p>Contact us: <a href="#">contact@example.com</a></p>
