--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,9 +1,9 @@
 /* Footer */
 
 .footer {
-	position: absolute;
-	bottom: 10px;
-	right: 0;
+	display: flex;
+	justify-content: flex-end;
+	margin-bottom: 10px;
 
 	li {
 		margin: 0 5px;
